--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "bun-types": "^0.1.0"
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "bun-types": "^0.1.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "typescript": "*"
   }
 }
